# no-compiler

./: Cargo.toml  README.md  release.toml
.github/workflows/: checks.yml
crates/lsp/: Cargo.toml
crates/lsp/src/: lib.rs
examples/cat/: cat.nc
plugin/: init.lua
queries/nc/: highlights.scm
src/: actions.rs  args.rs  main.rs
src/bandb/: bits.rs  byte.rs  mod.rs
src/structures/: bits.rs  byte.rs
src/traits/: mod.rs  try_from_iter.rs
tree-sitter-nc/: Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-nc/bindings/c/: tree-sitter-nc.h  tree-sitter-nc.pc.in
tree-sitter-nc/bindings/go/: binding.go  binding_test.go
tree-sitter-nc/bindings/node/: binding.cc
tree-sitter-nc/bindings/python/tests/: test_binding.py
tree-sitter-nc/bindings/python/tree_sitter_nc/: __init__.py  binding.c
tree-sitter-nc/bindings/rust/: build.rs  lib.rs
tree-sitter-nc/bindings/swift/TreeSitterNcTests/: TreeSitterNcTests.swift
tree-sitter-nc/src/: grammar.json  node-types.json  parser.c
wix/: main.wxs
